add salesman validation

--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -36,148 +36,228 @@
 			<div class="grid-100 mobile-grid-100">
 				<p class="title">Tags de la obra</p>
 				<input name='tags' class="input tags" type="text"/>
-			</p>
+				<div class="separator">
+					<span class="line"></span><span class="text">CARACTERÍSTICAS</span><span class="line"></span>
+				</div>
+				<div class="switch u-margin-top-10">
+					<p class="title">Público</p>
+					<span class="value">On</span>
+					<div class="am-Switch-button">
+						<i class="fa fa-bars"></i>
+					</div>
+				</div>
+				<button class="button u-margin-top-30" data-color="blue">SUBIR OBRA</button>
+			</div>
+		</form>
+	</div>
+
+	<div class="am-upload-work-box grid-container u-margin-top-20">
+		<div class="grid-100">
+			<p class="main-title">TU OBRA SE HA PUBLICÓ CON ÉXITO</p>
+			<div class="u-separator"></div>
+			<div class="work-collection-card u-margin-top-40">
+				<div class="work-collection-card-img">
+					<img src="/img/works/work9.jpg">
+				</div>
+				<div class="work-collection-card-data">
+					<p class="work-collection-card-title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</p>
+					<p class="work-collection-card-artist">Sergio Gonzales Mucho</p>
+				</div>
+			</div>
+			<div class="separator u-margin-top-20">
+				<span class="line"></span><span class="text">¿QUE QUIERES HACER AHORA?</span><span class="line"></span>
+			</div>
+		</div>
+		<div class="u-padding-top-20" style="oferoverflow: hidden;">
+			<div class="grid-50">
+				<button class="button inline upload u-margin-top-30 upload_button">
+					<i class="bi_interface-view"></i>&nbsp;&nbsp;&nbsp;VER OBRA
+				</button>
+			</div>
+			<div class="grid-50">
+				<button class="button inline upload u-margin-top-30 upload_button" data-color="green">
+					<i class="bi_ecommerce-market"></i>&nbsp;&nbsp;&nbsp;VENDER OBRA
+				</button>
+			</div>
+			<div class="grid-50 suffix-50">
+				<button class="button inline upload u-margin-top-30 upload_button">
+					<i class="bi_interface-cloud-upload"></i>&nbsp;&nbsp;&nbsp;SUBIR OTRA OBRA
+				</button>
+			</div>
+			<div class="grid-50">
+				<button class="button inline upload u-margin-top-30 upload_button">
+					<i class="bi_editorial-compose"></i>&nbsp;&nbsp;&nbsp;EDITAR OBRA
+				</button>
+			</div>
+			<div class="grid-50">
+				<button class="button inline upload u-margin-top-30 upload_button" data-color="red">
+					<i class="bi_editorial-trash-l"></i>&nbsp;&nbsp;&nbsp;ELIMINAR OBRA
+				</button>
+			</div>
+		</div>
+	</div>
+
+	<div class="am-upload-work-box grid-container u-margin-top-20">
+		<div class="grid-100">
+			<p class="main-title"><i class="bi_ecommerce-shop"></i>&nbsp;&nbsp;VENDE TU TRABAJO</p>
+			<div class="u-separator"></div>
+			<div class="work-collection-card u-margin-top-40">
+				<div class="work-collection-card-img">
+					<img src="/img/works/work9.jpg">
+				</div>
+				<div class="work-collection-card-data">
+					<p class="work-collection-card-title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</p>
+					<p class="work-collection-card-artist">Sergio Gonzales Mucho</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="grid-100">
+			<div class="separator u-margin-top-20">
+				<span class="line"></span><span class="text">VENDER ARTE ORIGINAL</span><span class="line"></span>
+			</div>
+		</div>
+
+		<div class="grid-50 sufix-50">
+			<p class="title">Elige la moneda</p>
+			<select class="input select" name='categoryId'>
+				<option value="">Nuevos Soles (PEN)</option>
+				<option value="">Nuevos Soles (PEN)</option>
+				<option value="">Nuevos Soles (PEN)</option>
+			</select>
+		</div>
+
+		<div class="grid-100">
+			<p class="title">Ingresa tu ganancia</p>
+			<div class="operators">
+				<div class="box">
+					<div class="input container">
+						<textarea rows="3" placeholder="cuanto deseas ganar"></textarea>
+					</div>
+				</div>
+				<div class="simbol">+</div>
+				<div class="box">
+					<p>Ganamos si tu ganas (30%)</p>
+				</div>
+				<div class="simbol">=</div>
+				<div class="box">
+					<input class="input" placeholder="Total">
+				</div>
+			</div>
+			<div class="operators-desc u-margin-top-10">
+				<p>GANANCIA DEL ARTISTA</p>
+				<p>COMISIÓN ARTE MANIFIESTO</p>
+				<p>PRECIO DE LISTA OBRA</p>
+			</div>
+		</div>
+
+		<div class="grid-100 u-margin-top-20">
 			<div class="separator">
-				<span class="line"></span><span class="text">CARACTERÍSTICAS</span><span class="line"></span>
-			</div>
-			<div class="switch u-margin-top-10">
-				<p class="title">Público</p>
-				<span class="value">On</span>
-				<div class="am-Switch-button">
-					<i class="fa fa-bars"></i>
-				</div>
-			</div>
-			<button class="button u-margin-top-30" data-color="blue">SUBIR OBRA</button>
-		</div>
-	</form>
-</div>
-<div class="am-upload-work-box grid-container u-margin-top-20">
-	<div class="grid-100">
-		<p class="main-title">TU OBRA SE HA PUBLICÓ CON ÉXITO</p>
-		<div class="u-separator"></div>
-		<div class="work-collection-card u-margin-top-40">
-			<div class="work-collection-card-img">
-				<img src="/img/works/work9.jpg">
-			</div>
-			<div class="work-collection-card-data">
-				<p class="work-collection-card-title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</p>
-				<p class="work-collection-card-artist">Sergio Gonzales Mucho</p>
+				<span class="line"></span><span class="text">DATOS DEL ENVÍO</span><span class="line"></span>
 			</div>
 		</div>
-		<div class="separator u-margin-top-20">
-			<span class="line"></span><span class="text">¿QUE QUIERES HACER AHORA?</span><span class="line"></span>
+
+		<div class="grid-100">
+			<p class="sub-title">Ingresa datos exactos para hacer un mejor cálculo del envío y el manejo de la obra, incluyendo el peso del empaque</p>
+		</div>
+
+		<div class="grid-50 mobile-grid-100">
+			<p class="title">Ancho</p>
+			<input name='name' class="input" type="text" placeholder="Ingresa en cm"/>
+		</div>
+		<div class="grid-50 mobile-grid-100">
+			<p class="title">Largo</p>
+			<input name='name' class="input" type="text" placeholder="Ingresa en cm"/>
+		</div>
+		<div class="grid-50 mobile-grid-100">
+			<p class="title">Profundidad</p>
+			<input name='name' class="input" type="text" placeholder="Ingresa en cm"/>
+		</div>
+		<div class="grid-50 mobile-grid-100">
+			<p class="title">Peso</p>
+			<input name='name' class="input" type="text" placeholder="Cuantos kilos pesa"/>
 		</div>
 	</div>
-	<div class="u-padding-top-20" style="oferoverflow: hidden;">
-		<div class="grid-50">
-			<button class="button inline upload u-margin-top-30 upload_button">
-				<i class="bi_interface-view"></i>&nbsp;&nbsp;&nbsp;VER OBRA
+
+	<div class="am-upload-work-box grid-container u-margin-top-20">
+		<div class="grid-100">
+			<p class="main-title">VALIDACIÓN DE VENDEDOR</p>
+			<div class="u-separator"></div>
+			<div class="separator">
+				<span class="line"></span><span class="text">DATOS DE VENDEDOR</span><span class="line"></span>
+			</div>
+		</div>
+
+		<div class="grid-100">
+			<p class="title">¿Que tipo de documento tienes?</p>
+		</div>
+		<div class="grid-50 mobile-grid-50">
+			<select class="input select" name='categoryId'>
+				<option value="">Seleccionar tipo</option>
+				<option value="">Seleccionar tipo</option>
+				<option value="">Seleccionar tipo</option>
+			</select>
+		</div>
+
+		<div class="grid-100">
+			<p class="title">Nro de Documento</p>
+			<input name='' class="input" type="text" placeholder="Ingresa un documento válido"/>
+		</div>
+
+		<div class="grid-100">
+			<p class="title">Nombre completo / Razón Social</p>
+			<input name='' class="input" type="text" placeholder="Ingresa un documento válido"/>
+		</div>
+
+		<div class="grid-100">
+			<p class="title">Dirección de Domicilio</p>
+			<input name='' class="input" type="text" placeholder="Dirección Línea 1"/>
+		</div>
+		<div class="grid-100">
+			<p class="title">Dirección de Domicilio</p>
+			<input name='' class="input" type="text" placeholder="Dirección Línea 1"/>
+		</div>
+
+		<div class="grid-50 mobile-grid-50">
+			<p class="title">País</p>
+			<select class="input select" name='categoryId'>
+				<option value="">Seleccionar País</option>
+				<option value="">Seleccionar País</option>
+				<option value="">Seleccionar País</option>
+			</select>
+		</div>
+		<div class="grid-50 mobile-grid-50">
+			<p class="title">Ciudad</p>
+			<select class="input select" name='categoryId'>
+				<option value="">Seleccionar ciudad</option>
+				<option value="">Seleccionar ciudad</option>
+				<option value="">Seleccionar ciudad</option>
+			</select>
+		</div>
+
+		<div class="grid-100">
+			<p class="title">Teléfono móvil</p>
+			<input name='' class="input" type="text" placeholder="Ingresa el número de whatsapp"/>
+		</div>
+
+		<div class="grid-100">
+			<p class="title">Cuál quieres que sea el método de pago</p>
+		</div>
+
+		<div class="grid-50 mobile-grid-50">
+			<select class="input select" name='categoryId'>
+				<option value="">Seleccionar tipo</option>
+				<option value="">Seleccionar tipo</option>
+				<option value="">Seleccionar tipo</option>
+			</select>
+		</div>
+
+		<div class="grid-100">
+			<button class="button inline upload u-margin-top-30 upload_button" data-color="green" style="margin-top: 40px;">
+				<i class="bi_ecommerce-market"></i>&nbsp;&nbsp;&nbsp;APLICAR SOLICITUD
 			</button>
 		</div>
-		<div class="grid-50">
-			<button class="button inline upload u-margin-top-30 upload_button" data-color="green">
-				<i class="bi_ecommerce-market"></i>&nbsp;&nbsp;&nbsp;VENDER OBRA
-			</button>
-		</div>
-		<div class="grid-50 suffix-50">
-			<button class="button inline upload u-margin-top-30 upload_button">
-				<i class="bi_interface-cloud-upload"></i>&nbsp;&nbsp;&nbsp;SUBIR OTRA OBRA
-			</button>
-		</div>
-		<div class="grid-50">
-			<button class="button inline upload u-margin-top-30 upload_button">
-				<i class="bi_editorial-compose"></i>&nbsp;&nbsp;&nbsp;EDITAR OBRA
-			</button>
-		</div>
-		<div class="grid-50">
-			<button class="button inline upload u-margin-top-30 upload_button" data-color="red">
-				<i class="bi_editorial-trash-l"></i>&nbsp;&nbsp;&nbsp;ELIMINAR OBRA
-			</button>
-		</div>
 	</div>
-</div>
-
-<div class="am-upload-work-box grid-container u-margin-top-20">
-	<div class="grid-100">
-		<p class="main-title"><i class="bi_ecommerce-shop"></i>&nbsp;&nbsp;VENDE TU TRABAJO</p>
-		<div class="u-separator"></div>
-		<div class="work-collection-card u-margin-top-40">
-			<div class="work-collection-card-img">
-				<img src="/img/works/work9.jpg">
-			</div>
-			<div class="work-collection-card-data">
-				<p class="work-collection-card-title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</p>
-				<p class="work-collection-card-artist">Sergio Gonzales Mucho</p>
-			</div>
-		</div>
-	</div>
-
-	<div class="grid-100">
-		<div class="separator u-margin-top-20">
-			<span class="line"></span><span class="text">VENDER ARTE ORIGINAL</span><span class="line"></span>
-		</div>
-	</div>
-
-	<div class="grid-50 sufix-50">
-		<p class="title">Elige la moneda</p>
-		<select class="input select" name='categoryId'>
-			<option value="">Nuevos Soles (PEN)</option>
-			<option value="">Nuevos Soles (PEN)</option>
-			<option value="">Nuevos Soles (PEN)</option>
-		</select>
-	</div>
-
-	<div class="grid-100">
-		<p class="title">Ingresa tu ganancia</p>
-		<div class="operators">
-			<div class="box">
-				<div class="input container">
-					<textarea rows="3" placeholder="cuanto deseas ganar"></textarea>
-				</div>
-			</div>
-			<div class="simbol">+</div>
-			<div class="box">
-				<p>Ganamos si tu ganas (30%)</p>
-			</div>
-			<div class="simbol">=</div>
-			<div class="box">
-				<input class="input" placeholder="Total">
-			</div>
-		</div>
-		<div class="operators-desc u-margin-top-10">
-			<p>GANANCIA DEL ARTISTA</p>
-			<p>COMISIÓN ARTE MANIFIESTO</p>
-			<p>PRECIO DE LISTA OBRA</p>
-		</div>
-	</div>
-
-	<div class="grid-100 u-margin-top-20">
-		<div class="separator">
-			<span class="line"></span><span class="text">DATOS DEL ENVÍO</span><span class="line"></span>
-		</div>
-	</div>
-
-	<div class="grid-100">
-		<p class="sub-title">Ingresa datos exactos para hacer un mejor cálculo del envío y el manejo de la obra, incluyendo el peso del empaque</p>
-	</div>
-
-	<div class="grid-50 mobile-grid-100">
-		<p class="title">Ancho</p>
-		<input name='name' class="input" type="text" placeholder="Ingresa en cm"/>
-	</div>
-	<div class="grid-50 mobile-grid-100">
-		<p class="title">Largo</p>
-		<input name='name' class="input" type="text" placeholder="Ingresa en cm"/>
-	</div>
-	<div class="grid-50 mobile-grid-100">
-		<p class="title">Profundidad</p>
-		<input name='name' class="input" type="text" placeholder="Ingresa en cm"/>
-	</div>
-	<div class="grid-50 mobile-grid-100">
-		<p class="title">Peso</p>
-		<input name='name' class="input" type="text" placeholder="Cuantos kilos pesa"/>
-	</div>
-</div>
 </div>
 {% endblock %}
 
